--- a/photo-grid.css
+++ b/photo-grid.css
@@ -109,7 +109,7 @@
 
 /* HOVER EFFECT  */
 
-#categories li div:hover h1 {
+/* #categories li div:hover h1 {
   bottom:49.3%;
   padding-bottom:10%;
 }
@@ -117,7 +117,7 @@
 #categories li div:hover p{
   top:49.3%;
   padding-top:10%;
-}
+} */
 #fork{
   /* position:fixed; */
   top:0;
